# OpenVokaturiTests

./: AccuracyResults.txt  CMakeLists.txt  OpenVokaturiTests.kdev4  README.md  VokaWav.h  VokaWavMean.c  main.c
.kdev4/: OpenVokaturiTests.kdev4
api/: Vokaturi.h
cmake/: FindOpenVokaturi.cmake
